--- a/core/template/dashboard/cmd.action.message.default.html
+++ b/core/template/dashboard/cmd.action.message.default.html
@@ -1,37 +1,37 @@
 <div class="cmd cmd-widget reportModeHidden" data-type="action" data-subtype="message" data-template="default" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#">
   <div class="content-lg">
-    <input class="form-control input-sm title" placeholder="#title_placeholder#" data-cmd_id="#id#" value="#title#"/>
-    <textarea class="form-control input-sm message" rows="2" placeholder="#message_placeholder#" data-cmd_uid="#uid#" data-cmd_id="#id#">#message#</textarea>
-    <a class='btn btn-xs execute'>#name_display#</a>
+    <input class="input-sm title" placeholder="#title_placeholder#" value="#title#">
+    <textarea class="form-control input-sm message" rows="2" placeholder="#message_placeholder#">#message#</textarea>
+    <a class="btn btn-xs execute">#name_display#</a>
   </div>
   <template>
-    <div>title : {{Titre par défaut}}.</div>
-    <div>title_placeholder : {{Titre indicatif par défaut}}.</div>
-    <div>title_possibility_list : title1, title2 ({{Autocomplete}}).</div>
-    <div>title_disable : 1 ({{Ne pas afficher le champ titre}}).</div>
-    <div>message_placeholder : {{Message indicatif par défaut}}.</div>
-    <div>message : {{Message par défaut}}.</div>
-    <div>message_disable : 1 ({{Ne pas afficher le champ message}}).</div>
+    <div>title : {{Titre par défaut}}</div>
+    <div>title_placeholder : {{Titre indicatif par défaut}}</div>
+    <div>title_possibility_list : title1, title2 ({{Autocomplete}})</div>
+    <div>title_disable : 1 ({{Ne pas afficher le champ titre}})</div>
+    <div>message_placeholder : {{Message indicatif par défaut}}</div>
+    <div>message : {{Message par défaut}}</div>
+    <div>message_disable : 1 ({{Ne pas afficher le champ message}})</div>
   </template>
   <script>
-    if ('#title_disable#' == '1') {
-      $('.cmd[data-cmd_uid=#uid#] .title').hide()
-    }
-    if ('#message_disable#' == '1') {
-      $('.cmd[data-cmd_uid=#uid#] .message').hide()
-    }
-
-    $('.cmd[data-cmd_uid=#uid#]:last .execute').on('click', function() {
-      jeedom.cmd.execute({id: '#id#', value: {title: $('.cmd[data-cmd_uid=#uid#] .title').value(), message: $('.cmd[data-cmd_uid=#uid#] .message').value()}})
+    document.querySelector('.cmd[data-cmd_uid=#uid#] .execute').addEventListener('click', function() {
+      let title = document.querySelector('.cmd[data-cmd_uid=#uid#] .title').value
+      let message = document.querySelector('.cmd[data-cmd_uid=#uid#] .message').value
+      jeedom.cmd.execute({ id: '#id#', value: { title: title, message: message } })
     })
 
-    if ($.issetWidgetOptParam('#title_possibility_list#', 'title_possibility_list')) {
-      let mylist#id# = '#title_possibility_list#'
-      mylist#id# = mylist#id#.split(',')
-      mylist#id# = mylist#id#.map(str => str.trim())
+    if ('#title_disable#' == '1') {
+      document.querySelector('.cmd[data-cmd_uid=#uid#] .title').unseen()
+    }
+    if ('#message_disable#' == '1') {
+      document.querySelector('.cmd[data-cmd_uid=#uid#] .message').unseen()
+    }
+
+    if (domUtils.issetWidgetOptParam('#title_possibility_list#', 'title_possibility_list')) {
+      let mylist = '#title_possibility_list#'
       $('.cmd[data-cmd_uid=#uid#] .title').autocomplete({
-        source: mylist#id#,
-        close: function (event, ui) {
+        source: mylist.split(',').map(str => str.trim()),
+        close: function(event, ui) {
           $(this).trigger('focusout')
         }
       })
