--- a/core/template/dashboard/cmd.action.other.btnAlert.html
+++ b/core/template/dashboard/cmd.action.other.btnAlert.html
@@ -1,38 +1,43 @@
 <div class="cmd cmd-widget" data-type="action" data-subtype="other" data-cmd_id="#id#" data-template="btnAlert" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#">
-  <div class="content-xs">
-    <a class="btn btn-sm btn-default action cmdName tooltips" title="#name#">
-      <span class="iconCmd"></span>
+  <div class="content-sm">
+    <a class="btn btn-sm btn-default execute cmdName tooltips" title="#name#">
+      <span class="iconCmdLine"></span>
       <span class="cmdName #hide_name#">#valueName#</span>
     </a>
   </div>
-  <template></template>
+  <div class="timeCmd label label-default"></div>
+  <template>
+    <div>time : duration|date ({{Affiche durée ou date de la valeur}})</div>
+  </template>
   <script>
-     jeedom.cmd.addUpdateFunction('#id#',function(_options) {
-      if (['1', 1, '99', 99, 'on'].includes(_options.display_value)) {
-        if (jeedom.cmd.normalizeName('#name#') == 'on') {
-          $('.cmd[data-cmd_id=#id#]').hide()
-        }else{
-          $('.cmd[data-cmd_id=#id#]').show()
-          $('.cmd[data-cmd_id=#id#] .iconCmd').empty().append('<i class="far fa-bell"></i>')
-        }
-      } else if (['0', 0, 'off'].includes(_options.display_value)) {
-        if (jeedom.cmd.normalizeName('#name#') == 'off') {
-          $('.cmd[data-cmd_id=#id#]').hide()
-        }else{
-          $('.cmd[data-cmd_id=#id#]').show()
-          $('.cmd[data-cmd_id=#id#] .iconCmd').empty().append('<i class="far fa-bell-slash"></i>')
-        }
-      }
-    });
-    jeedom.cmd.refreshValue([{cmd_id :'#id#',display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#'}])
-
-    $('.cmd[data-cmd_uid=#uid#] .action').off().on('click', function () {
-      jeedom.cmd.execute({id: '#id#'})
+    document.querySelector('.cmd[data-cmd_uid=#uid#] .execute').addEventListener('click', function() {
+      jeedom.cmd.execute({ id: '#id#' })
     })
 
-    if ($('.cmd[data-cmd_uid=#uid#]').last().prev().data('subtype') != undefined && $('.cmd[data-cmd_id=#id#]').last().prev().data('subtype') != 'other'
-    && $('.cmd[data-cmd_uid=#uid#]').last().prev().css('display') != 'block') {
-      $('.cmd[data-cmd_uid=#uid#]').last().prepend('<br/>')
-    }
+    jeedom.cmd.addUpdateFunction('#id#', function(_options) {
+      if (is_object(cmd = document.querySelector('.cmd[data-cmd_uid="#uid#"]'))) {
+        if ('#time#' == 'duration' || '#time#' == 'date') {
+          jeedom.cmd.displayDuration(_options.valueDate, cmd.querySelector('.timeCmd'), '#time#')
+        }
+
+        if (_options.display_value >= 1 || _options.display_value == 'on') {
+          if (jeedom.cmd.normalizeName('#name#') == 'on') {
+            cmd.unseen()
+          } else {
+            cmd.seen()
+            cmd.querySelector('.iconCmdLine').innerHTML = '<i class="icon_red far fa-bell"></i>'
+          }
+        } else {
+          if (jeedom.cmd.normalizeName('#name#') == 'off') {
+            cmd.unseen()
+          } else {
+            cmd.seen()
+            cmd.querySelector('.iconCmdLine').innerHTML = '<i class="icon_green far fa-bell-slash"></i>'
+          }
+        }
+      }
+    })
+
+    jeedom.cmd.refreshValue([{ cmd_id: '#id#', display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#' }])
   </script>
 </div>
