--- a/core/template/dashboard/cmd.action.other.default.html
+++ b/core/template/dashboard/cmd.action.other.default.html
@@ -1,19 +1,15 @@
 <div class="cmd cmd-widget reportModeHidden" data-type="action" data-subtype="other" data-template="default" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#">
-  <div class="content-xs">
-    <a class="btn btn-sm btn-default action tooltips">#name_display#</a>
+  <div class="content-sm">
+    <a class="btn btn-sm btn-default execute tooltips">#name_display#</a>
   </div>
   <template></template>
   <script>
-    $('.cmd[data-cmd_uid=#uid#]:last .action').off('click').on('click', function () {
-      jeedom.cmd.execute({id: '#id#'})
+    document.querySelector('.cmd[data-cmd_uid=#uid#] .execute').addEventListener('click', function() {
+      jeedom.cmd.execute({ id: '#id#' })
     })
 
-    if ($('.cmd[data-cmd_uid=#uid#]').last().prev().data('subtype') != undefined && $('.cmd[data-cmd_id=#id#]').last().prev().data('subtype') != 'other'
-    && $('.cmd[data-cmd_uid=#uid#]').last().prev().css('display') != 'block') {
-      $('.cmd[data-cmd_uid=#uid#]').last().prepend('<br/>');
-    }
-    if ("#name#" != '#name_display#') {
-      $('.cmd[data-cmd_uid=#uid#]:last .action').attr('title',"#name#")
+    if ('#name#' != '#name_display#') {
+      document.querySelector('.cmd[data-cmd_uid=#uid#] .execute').setAttribute('title', '#name#')
     }
   </script>
 </div>
