--- a/core/template/dashboard/cmd.action.slider.value.html
+++ b/core/template/dashboard/cmd.action.slider.value.html
@@ -1,83 +1,91 @@
 <div class="cmd cmd-widget" data-type="action" data-subtype="slider" data-template="value" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#">
   <div class="title #hide_name#">
-    <div class="cmdName">#name_display#</div>
+    <span class="cmdName">#name_display#</span>
   </div>
-  <div class="content-xs">
-    <input type="number" min="#minValue#" max="#maxValue#" value="#state#" step="1" id="sliderInput#id#">
+  <div class="content-sm">
+    <div>
+      <input type="number" min="#minValue#" max="#maxValue#" id="sliderInput#id#">
+    </div>
     <div id="widget_slider#id#" class="slider"></div>
   </div>
+  <div class="timeCmd label label-default"></div>
   <template>
     <div>color : rgb(20,20,20) ({{Couleur d'arrière plan}})</div>
-    <div>step : 0.5 ({{Pas utilisé pour le changement de valeur}})</div>
+    <div>step : 1 ({{Pas du changement de valeur}})</div>
     <div>noslider : 1 ({{Ne pas afficher le slider}})</div>
+    <div>width : 55 ({{Largeur de la zone de saisie}})</div>
+    <div>time : duration|date ({{Affiche durée ou date de la valeur}})</div>
   </template>
   <script>
-    var $inputNumber#id# = $('#sliderInput#id#')
-    var step#id# = 1
-    var spinTimer#id# = null
-    if ($.issetWidgetOptParam('#step#', 'step')) {
-      step#id# = parseFloat('#step#')
-      $inputNumber#id#.attr('step', step#id#)
-    }
+    var step = (domUtils.issetWidgetOptParam('#step#', 'step')) ? parseFloat('#step#') : 1
+    document.querySelector('.cmd[data-cmd_uid="#uid#"] #sliderInput#id#').setAttribute('step', step)
 
     $('#sliderInput#id#').spinner({
-      icons: { down: "ui-icon-triangle-1-s", up: "ui-icon-triangle-1-n"},
+      icons: { down: "ui-icon-triangle-1-s", up: "ui-icon-triangle-1-n" },
       stop: function(event, ui) {
         if (event.currentTarget.id != 'sliderInput#id#') {
-          clearTimeout(spinTimer#id#)
-          spinTimer#id# = setTimeout(function() {
-            $inputNumber#id#.trigger('change')
+          clearTimeout(window['spinTimer#id#'])
+          window['spinTimer#id#'] = setTimeout(function() {
+            document.querySelector('.cmd[data-cmd_uid="#uid#"] #sliderInput#id#').blur()
           }, 1000)
         }
       }
     })
 
     if ('#noslider#' != '1') {
-      var mySlider#id# = $.createWidgetSlider({
+      window['mySlider#id#'] = domUtils.createWidgetSlider({
         sliderDiv: document.getElementById('widget_slider#id#'),
-        state: ('#state#' == '') ? #minValue# : '#state#',
-        min: #minValue#,
-        max: #maxValue#,
-        step: step#id#,
+        state: ('#state#' == '') ? parseFloat('#minValue#') : '#state#',
+        min: parseFloat('#minValue#'),
+        max: parseFloat('#maxValue#'),
+        step: step,
         tooltips: false
       })
 
-      if ($.issetWidgetOptParam('#color#', 'color')) {
-        $(mySlider#id#.target).find('.noUi-handle').style('background', '#color#', 'important')
-        $(mySlider#id#.target).find('.noUi-connect').style('background', '#color#', 'important')
-      }
-
-      mySlider#id#.on('update', function(values, handle) {
-        let value = values[handle].replace('#unite#', '').trim()
-        if (values[handle]) {
-          if (parseInt(value) == parseFloat(value)) {
-            $inputNumber#id#.val(parseInt(value))
-          } else {
-            $inputNumber#id#.val(parseFloat(value))
-          }
+      window['mySlider#id#'].on('update', function(values, handle) {
+        let input = document.querySelector('.cmd[data-cmd_uid="#uid#"] #sliderInput#id#')
+        if (parseInt(values[handle]) == parseFloat(values[handle])) {
+          input.value = parseInt(values[handle])
+        } else {
+          input.value = parseFloat(values[handle])
         }
       })
 
-      mySlider#id#.on('change', function(values, handle) {
-        jeedom.cmd.execute({id: '#id#', value: {slider: values[handle].replace('#unite#', '').trim()}})
+      window['mySlider#id#'].on('change', function(values, handle) {
+        jeedom.cmd.execute({ id: '#id#', value: { slider: values[handle] } })
       })
+
+      if (domUtils.issetWidgetOptParam('#color#', 'color')) {
+        document.querySelector('.cmd[data-cmd_uid="#uid#"] .noUi-handle').style.setProperty('background-color', '#color#', 'important')
+        document.querySelector('.cmd[data-cmd_uid="#uid#"] .noUi-connect').style.setProperty('background-color', '#color#', 'important')
+      }
     }
 
-    $inputNumber#id#.on('focusout', function(event) {
-      clearTimeout(spinTimer#id#)
-      if ($(this).attr('value') == $(this).attr('aria-valuenow')) return false
-      if ('#noslider#' != '1') mySlider#id#.set(this.value)
-      jeedom.cmd.execute({id: '#id#', value: {slider: this.value}})
+    document.querySelector('.cmd[data-cmd_uid="#uid#"] #sliderInput#id#').addEventListener('blur', function(event) {
+      clearTimeout(window['spinTimer#id#'])
+      if (this.getAttribute('value') != this.getAttribute('aria-valuenow')) {
+        jeedom.cmd.execute({ id: '#id#', value: { slider: parseFloat(this.value) } })
+      }
     })
 
-    $inputNumber#id#.on('change', function(event) {
-      if ('#noslider#' != '1') mySlider#id#.set(this.value)
-      jeedom.cmd.execute({id: '#id#', value: {slider: this.value}})
+    jeedom.cmd.addUpdateFunction('#id#', function(_options) {
+      if (is_object(cmd = document.querySelector('.cmd[data-cmd_uid="#uid#"]'))) {
+        if ('#time#' == 'duration' || '#time#' == 'date') {
+          jeedom.cmd.displayDuration(_options.valueDate, cmd.querySelector('.timeCmd'), '#time#')
+        }
+
+        let input = cmd.querySelector('#sliderInput#id#')
+        input.value = _options.value
+        input.setAttribute('value', _options.value)
+        input.setAttribute('aria-valuenow', _options.value)
+        if ('#noslider#' != '1') window['mySlider#id#'].set(_options.value)
+      }
     })
 
-    jeedom.cmd.addUpdateFunction('#id#',function(_options) {
-      $inputNumber#id#.val(_options.value).attr('value', _options.value).attr('aria-valuenow', _options.value)
-      if ('#noslider#' != '1') mySlider#id#.set(_options.value)
-    });
+    jeedom.cmd.refreshValue([{ cmd_id: '#id#', value: '#state#', display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#' }])
+
+    if (domUtils.issetWidgetOptParam('#width#', 'width') && parseFloat('#width#') >= 70) {
+      document.querySelector('.cmd[data-cmd_uid="#uid#"]  #sliderInput#id#').style.width = '#width#px'
+    }
   </script>
 </div>
