--- a/core/template/dashboard/cmd.info.binary.shutter.html
+++ b/core/template/dashboard/cmd.info.binary.shutter.html
@@ -1,38 +1,50 @@
 <div class="cmd cmd-widget shuttergauge #history#" data-type="info" data-subtype="binary" data-template="shutter" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#">
   <div class="title #hide_name#">
-    <div class="cmdName">#name_display#</div>
+    <span class="cmdName">#name_display#</span>
   </div>
-  <div class="content-sm " data-cmd_id="#id#">
+  <div class="content-sm">
     <div class="shuttergauge-chart">
       <div class="shuttergauge-bckg">
         <div class="shuttergauge-value"></div>
       </div>
     </div>
   </div>
-  <div class="value" data-cmd_id="#id#">
-    <div class="state"><strong>#state#</strong> <strong>#unite#</strong></div>
+  <div class="state">
+    <span class="value"></span>
   </div>
-  <div class="cmdStats #hide_history#">
-    <span title='{{Min}}' class='tooltips'>#minHistoryValue#</span>|<span title='{{Moyenne}}' class='tooltips'>#averageHistoryValue#</span>|<span title='{{Max}}' class='tooltips'>#maxHistoryValue#</span> <i class="#tendance#"></i>
-  </div>
+  <div class="timeCmd label label-default"></div>
   <template>
     <div>color : rgb(20,20,20) ({{Couleur du curseur et valeur}})</div>
+    <div>time : duration|date ({{Affiche durée ou date de la valeur}})</div>
   </template>
   <script>
-     jeedom.cmd.addUpdateFunction('#id#',function(_options) {
-      $('.cmd[data-cmd_id=#id#]').attr('title','{{Date de valeur}} : '+_options.valueDate+'<br/>{{Date de collecte}} : '+_options.collectDate)
-      if (_options.display_value == '1') {
-        $('.cmd[data-cmd_uid=#uid#] .shuttergauge-value').height('0')
-      } else {
-        $('.cmd[data-cmd_uid=#uid#] .shuttergauge-value').height('100%')
+    jeedom.cmd.addUpdateFunction('#id#', function(_options) {
+      if (is_object(cmd = document.querySelector('.cmd[data-cmd_uid="#uid#"]'))) {
+        cmd.setAttribute('title', '{{Date de valeur}} : ' + _options.valueDate + '<br>{{Date de collecte}} : ' + _options.collectDate)
+        if ('#time#' == 'duration' || '#time#' == 'date') {
+          jeedom.cmd.displayDuration(_options.valueDate, cmd.querySelector('.timeCmd'), '#time#')
+        }
+
+        if (_options.value == 1) {
+          cmd.querySelector('.shuttergauge-value').style.height = '0%'
+        } else if (_options.value == 0) {
+          cmd.querySelector('.shuttergauge-value').style.height = '100%'
+        } else {
+          cmd.querySelector('.value').innerHTML = '<span class="label label-danger">' + _options.value + '</span>'
+        }
+
+        if (_options.alertLevel == 'warning') {
+          cmd.querySelector('.value').innerHTML = '<span class="label label-warning"><i class="fas fa-bell"></i> ' + _options.value + '</span>'
+        } else if (_options.alertLevel == 'danger') {
+          cmd.querySelector('.value').innerHTML = '<span class="label label-danger"><i class="fas fa-exclamation"></i> ' + _options.value + '</span>'
+        }
       }
-      $('.cmd[data-cmd_id=#id#] .state strong').first().text(_options.display_value)
-    });
+    })
 
-    jeedom.cmd.refreshValue([{cmd_id :'#id#',display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#'}])
+    jeedom.cmd.refreshValue([{ cmd_id: '#id#', value: '#value#', display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#' }])
 
-    if ($.issetWidgetOptParam('#color#', 'color')) {
-      $('.cmd[data-cmd_id=#id#]').find('div.shuttergauge-value').style('background', '#color#', 'important')
+    if (domUtils.issetWidgetOptParam('#color#', 'color')) {
+      document.querySelector('.cmd[data-cmd_uid="#uid#"] .shuttergauge-value').style.setProperty('background-color', '#color#', 'important')
     }
   </script>
 </div>
