--- a/core/template/dashboard/cmd.info.binary.tmpliconline.html
+++ b/core/template/dashboard/cmd.info.binary.tmpliconline.html
@@ -1,31 +1,38 @@
 <div class="cmd cmd-widget #history#" data-type="info" data-subtype="binary" data-template="tmpliconline" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#">
   <div class="content-xs">
-    <span class="cmdName #hide_name#">#name_display# </span> <span class="iconCmdLine"></span>
+    <span class="cmdName #hide_name#">#name_display#</span> <span class="iconCmdLine"></span>
   </div>
-  <template></template>
+  <div class="state">
+    <span class="value"></span>
+  </div>
+  <div class="timeCmd label label-default"></div>
+  <template>
+    <div>time : duration|date ({{Affiche durée ou date de la valeur}})</div>
+  </template>
   <script>
-     jeedom.cmd.addUpdateFunction('#id#',function(_options) {
-      let cmd = $('.cmd[data-cmd_id=#id#]')
-      cmd.attr('title', '{{Date de valeur}} : '+_options.valueDate+'<br/>{{Date de collecte}} : '+_options.collectDate)
-      if (_options.display_value == '1') {
-        $('.cmd[data-cmd_id=#id#] .iconCmdLine').empty().append("#_icon_on_#")
-      } else {
-        $('.cmd[data-cmd_id=#id#] .iconCmdLine').empty().append("#_icon_off_#")
-      }
-      if (_options.alertLevel) {
-        if (_options.alertLevel == 'warning') {
-          cmd.addClass('label label-warning')
-          cmd.attr('data-alertlevel','warning')
-        } else if (_options.alertLevel == 'danger') {
-          cmd.addClass('label label-danger')
-          cmd.attr('data-alertlevel','danger')
+    jeedom.cmd.addUpdateFunction('#id#', function(_options) {
+      if (is_object(cmd = document.querySelector('.cmd[data-cmd_uid="#uid#"]'))) {
+        cmd.setAttribute('title', '{{Date de valeur}} : ' + _options.valueDate + '<br>{{Date de collecte}} : ' + _options.collectDate)
+        if ('#_time_widget_#' == '1' || '#time#' == 'duration' || '#time#' == 'date') {
+          jeedom.cmd.displayDuration(_options.valueDate, cmd.querySelector('.timeCmd'), '#time#')
+        }
+
+        if (_options.value == 1) {
+          cmd.querySelector('.iconCmdLine').innerHTML = "#_icon_on_#"
+        } else if (_options.value == 0) {
+          cmd.querySelector('.iconCmdLine').innerHTML = "#_icon_off_#"
         } else {
-          cmd.removeClass('label label-warning label-danger')
-          cmd.attr('data-alertlevel','none')
+          cmd.querySelector('.value').innerHTML = '<span class="label label-danger">' + _options.value + '</span>'
+        }
+
+        if (_options.alertLevel == 'warning') {
+          cmd.querySelector('.value').innerHTML = '<span class="label label-warning"><i class="fas fa-bell"></i> ' + _options.value + '</span>'
+        } else if (_options.alertLevel == 'danger') {
+          cmd.querySelector('.value').innerHTML = '<span class="label label-danger"><i class="fas fa-exclamation"></i> ' + _options.value + '</span>'
         }
       }
-    });
+    })
 
-    jeedom.cmd.refreshValue([{cmd_id :'#id#',display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#'}])
+    jeedom.cmd.refreshValue([{ cmd_id: '#id#', value: '#value#', display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#' }])
   </script>
 </div>
