--- a/core/template/dashboard/cmd.info.numeric.vertical.html
+++ b/core/template/dashboard/cmd.info.numeric.vertical.html
@@ -1,42 +1,57 @@
-<div class="cmd cmd-widget vgauge #history#" data-type="info" data-subtype="numeric"data-template="vertical" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#">
+<div class="cmd cmd-widget vgauge #history#" data-type="info" data-subtype="numeric" data-template="vertical" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#">
   <div class="title #hide_name#">
     <div class="cmdName">#name_display#</div>
   </div>
-  <div class="content-sm" data-cmd_id="#id#">
+  <div class="content-sm">
     <div class="vgauge-chart">
       <div class="vgauge-bckg">
         <div class="vgauge-value"></div>
       </div>
     </div>
   </div>
-  <div class="value" data-cmd_id="#id#">
-    <div class="state"><strong>#state# #unite#</strong></div>
-  </div>
+  <div class="state"><span class="value"></span> <span class="unit"></span></div>
+  <div class="timeCmd label label-default"></div>
   <div class="cmdStats #hide_history#">
-    <span title='{{Min}}' class='tooltips'>#minHistoryValue#</span>|<span title='{{Moyenne}}' class='tooltips'>#averageHistoryValue#</span>|<span title='{{Max}}' class='tooltips'>#maxHistoryValue#</span> <i class="#tendance#"></i>
+    <span title="{{Minimum}}" class="tooltips">#minHistoryValue#</span>|<span title="{{Moyenne}}" class="tooltips">#averageHistoryValue#</span>|<span title="{{Maximum}}" class="tooltips">#maxHistoryValue#</span> <i class="#tendance#"></i>
   </div>
   <template>
-    <div>color : rgb(20,20,20) ({{couleur de l'indicateur de valeur}})</div>
+    <div>color : rgb(20,20,20) ({{Couleur de l'indicateur de valeur}})</div>
+    <div>time : duration|date ({{Affiche durée ou date de la valeur}})</div>
   </template>
   <script>
-    jeedom.cmd.addUpdateFunction('#id#',function(_options) {
-      let position = _options.value
-      let minValue = ('#minValue#' == '') ? 0 : parseInt('#minValue#')
-      let maxValue = ('#maxValue#' == '') ? 100 : parseInt('#maxValue#')
-      if (position > maxValue) position = maxValue
-      if (position < minValue) position = minValue
-      let height = ((position - minValue) * 100) / (maxValue - minValue)
-      height = Math.round(parseFloat(height) * 10) / 10
-      let cmd = $('.cmd[data-cmd_id=#id#]')
-      cmd.attr('title','{{Date de valeur}} : '+_options.valueDate+'<br/>{{Date de collecte}} : '+_options.collectDate)
-      cmd.find('.vgauge-value').height(height+'%')
-      cmd.find('.state strong').first().text(_options.display_value+' '+_options.unit)
-    });
+    jeedom.cmd.addUpdateFunction('#id#', function(_options) {
+      if (is_object(cmd = document.querySelector('.cmd[data-cmd_uid="#uid#"]'))) {
+        cmd.setAttribute('title', '{{Date de valeur}} : ' + _options.valueDate + '<br>{{Date de collecte}} : ' + _options.collectDate)
+        if ('#time#' == 'duration' || '#time#' == 'date') {
+          jeedom.cmd.displayDuration(_options.valueDate, cmd.querySelector('.timeCmd'), '#time#')
+        }
 
-    jeedom.cmd.refreshValue([{cmd_id:'#id#', value: '#value#', display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#'}])
+        if (is_numeric(_options.value)) {
+          let position = parseFloat(_options.value), minValue = parseFloat('#minValue#'), maxValue = parseFloat('#maxValue#')
+          if (position > maxValue) position = maxValue
+          if (position < minValue) position = minValue
+          let height = ((position - minValue) * 100) / (maxValue - minValue)
+          height = Math.round(parseFloat(height) * 10) / 10
 
-    if ($.issetWidgetOptParam('#color#', 'color')) {
-      $('.cmd[data-cmd_id=#id#] .vgauge-value').css('background', '#color#')
+          cmd.querySelector('.vgauge-value').style.height = height + '%'
+          cmd.querySelector('.value').innerText = _options.display_value
+          cmd.querySelector('.unit').innerText = _options.unit
+        } else {
+          cmd.querySelector('.value').innerHTML = '<span class="label label-danger">' + _options.value + '</span>'
+        }
+
+        if (_options.alertLevel == 'warning') {
+          cmd.querySelector('.value').innerHTML = '<span class="label label-warning"><i class="fas fa-bell"></i> ' + _options.value + '</span>'
+        } else if (_options.alertLevel == 'danger') {
+          cmd.querySelector('.value').innerHTML = '<span class="label label-danger"><i class="fas fa-exclamation"></i> ' + _options.value + '</span>'
+        }
+      }
+    })
+
+    jeedom.cmd.refreshValue([{ cmd_id: '#id#', value: '#value#', display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#' }])
+
+    if (domUtils.issetWidgetOptParam('#color#', 'color')) {
+      document.querySelector('.cmd[data-cmd_uid="#uid#"] .vgauge-value').style.backgroundColor = '#color#'
     }
   </script>
 </div>
