--- a/desktop/css/coreWidgets.css
+++ b/desktop/css/coreWidgets.css
@@ -29,16 +29,16 @@ Desktop
   }
 
   div.eqLogic-widget div.cmd-widget {
-    position: relative;
     padding: 0;
-    min-width: 70px;
+    min-width: 100px;
+    display: inline-block;
+    vertical-align: top;
+    padding: 0 5px 5px 5px;
   }
+
   div.cmd-widget + br {
     margin: 7px;
     display: block;
-  }
-  .eqLogic-widget .tableCmdcss div.cmd-widget {
-    min-width: unset;
   }
 
   .eqLogic-widget.hideEqLogicName .widget-name {
@@ -49,12 +49,6 @@ Desktop
     color: var(--txt-color);
     width: 100%;
     height: 16px;
-    min-height: 16px;
-    max-height: 16px;
-    line-height: 14px;
-    position: relative;
-    display: table;
-    text-align: center;
   }
 
   div.cmd-widget .cmdName {
@@ -63,64 +57,41 @@ Desktop
   }
 
   div.cmd-widget div[class^="content"] {
-    display: table-cell;
-    vertical-align: middle !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
   }
 
   div.cmd-widget .content-xs {
+    display: block!important;
     color: var(--txt-color);
-    width: 100%;
-    height: 12px;
-    min-height: 12px;
-    line-height: 14px;
+    height: 14px;
     margin: 0;
-    position: relative;
-  }
-  div.cmd-widget .content-xs .slider.noUi-vertical {
-    margin-top: 5px;
-  }
-  div.cmd-widget .content-xs .slider.noUi-horizontal {
-    margin: 12px 5px;
   }
   div.cmd-widget .content-sm {
     height: 40px !important;
-    min-height: 40px;
-    max-height: 40px;
   }
   div.cmd-widget .content {
-    height: 56px !important;
-    min-height: 56px;
-    max-height: 56px;
+    height: 60px !important;
   }
   div.cmd-widget .content-lg {
-    height: 72px !important;
-    min-height: 72px;
-    max-height: 72px;
+    height: 80px !important;
   }
+
   div.cmd-widget .value {
     font-weight: bold;
     width: 100%;
     height: 16px;
-    min-height: 16px;
-    max-height: 16px;
     margin-bottom: 2px;
-  }
-  div.cmd-widget .value > .center-block {
-    color: var(--txt-color);
-    font-size: 11px;
-    font-weight: normal;
-    padding: 0 !important;
-    margin: 0;
   }
 
   .timeCmd.label {
-    display: ruby;
     color: var(--txt-color);
     background: rgb(var(--bg-color));
     position: relative;
     padding: 2px 5px !important;
     font-size: 11px !important;
-    margin-top: 4px;
   }
 
   .timeCmd.label:first-letter {
@@ -130,6 +101,7 @@ Desktop
   div.cmd-widget div[class^="content"] > select {
     font-size: 16px !important;
     height: 22px;
+    width: 75%;
   }
   div.cmd-widget div[class^="content"] > select > option {
     font-size: 12px !important;
@@ -138,9 +110,6 @@ Desktop
     font-size: 14px;
     top: 5px!important;
     right: 5px;
-  }
-  div.cmd-widget .input-group {
-    margin-bottom: 0;
   }
   div.eqLogic_layout_table table.tableCmd {
     min-width: 0%;
@@ -152,43 +121,10 @@ Desktop
     margin-bottom: 5px;
   }
 
-  .cmdStats,
-  div.cmd > div.center-block {
+  .cmdStats {
     color: var(--txt-color) !important;
     font-size: 10px !important;
-    font-weight: normal;
-    padding: 0 !important;
-    width: 100% !important;
-  }
-
-  .cmd-widget {
-    display: inline-block;
-    position : relative;
-    vertical-align: top;
-  }
-
-  .cmd-widget .statistiques {
-    position : absolute;
-    bottom: 0;
-    font-size: 0.80em;
-    left : 0;
-    margin : 0;
-    padding: 0;
-    line-height:0px;
-  }
-
-  .cmd-widget[data-subtype="select"] .title,
-  .cmd-widget[data-subtype="select"] .content-xs {
-    clear: both !important;
-    display: inline;
-    text-align: left;
-  }
-  .cmd-widget[data-subtype="select"] .cmdName {
-    font-size: 11px !important;
-    margin-left: 5px;
-  }
-  .cmd-widget[data-subtype="select"] .content-xs {
-    top: -4px !important;
+    padding: 5px 0 5px 0;
   }
 
   .verticalAlign {
@@ -280,16 +216,16 @@ Desktop
 
 /* v4.2 nouislider */
   div.cmd-widget .slider.noUi-horizontal {
+    width: 70px;
     margin-top: 10px;
-    margin-bottom: 10px !important;
   }
   div.cmd-widget .slider.noUi-horizontal .noUi-base {
-    width: 70px;
     z-index: 20;
   }
   div.cmd-widget .slider.noUi-vertical .noUi-base {
     width: 7px;
-    height: 55px;
+    height: 50px;
+    left: 5.5px;
     z-index: 20;
   }
   div.cmd-widget .slider .noUi-connects {
@@ -319,7 +255,7 @@ Desktop
     background: transparent;
   }
   div.cmd-widget .slider .noUi-handle {
-    top: -4.5px;
+    top: -5px;
     height: 1.3em;
     width: 1.3em;
     border-radius: 50%;
@@ -355,29 +291,19 @@ Desktop
     outline: none;
   }
   div.cmd-widget .slider.noUi-vertical .noUi-handle {
-    left: -11.5px;
+    left: -12.5px;
   }
   div.cmd-widget .slider .noUi-handle:focus {
     outline: none;
   }
 
 /* ____________________Specifics */
-  div.cmd-widget[data-subtype="text"] {
-    width: 146px;
-  }
-  div.cmd-widget[data-subtype="text"] .text {
-    margin-top: 5px;
-    resize: vertical;
-    height: 50px;
-  }
-
-
   div.cmd-widget[data-type="action"][data-subtype="other"][data-template="default"] {
-    display: inline;
+    min-width: unset;
+    padding: 0;
     margin-right: 2px;
   }
   div.cmd-widget[data-type="action"][data-subtype="slider"][data-template="value"] input {
-    width: 70px !important;
     font-size: 12px;
     padding: 2px;
   }
@@ -390,12 +316,8 @@ Desktop
   div.cmd-widget[data-type="action"][data-subtype="slider"][data-template="button"] .buttons {
     width: 130px;
   }
-  div.cmd-widget[data-type="action"][data-subtype="slider"][data-template="button"] .content-sm {
-    vertical-align: top !important;
-    padding-top: 6px;
-  }
   div.cmd-widget[data-type="action"][data-subtype="slider"][data-template="button"] .in_value {
-    opacity: 1 !important;
+    width: 70px;
   }
   div.cmd-widget[data-type="action"][data-subtype="message"][data-template="default"] {
     overflow: hidden;
@@ -404,29 +326,22 @@ Desktop
     margin: 5px 0 !important;
     resize: none !important;
   }
-
-
-  div.cmd-widget[data-type="action"][data-subtype="select"][data-template="default"] .title.hidden + .content-xs > .selectCmd {
-    margin-top: 9px;
-  }
-
   div.cmd-widget[data-type="info"][data-subtype="string"][data-template="error"],
   div.cmd-widget[data-type="info"][data-subtype="binary"][data-template="tmpliconline"],
   div.cmd-widget[data-type="info"][data-subtype="numeric"][data-template="line"],
-  div.cmd-widget[data-type="info"][data-subtype="string"][data-template="default"] {
+  div.cmd-widget[data-type="info"][data-subtype="string"][data-template="default"],
+  div.cmd-widget[data-type="info"][data-subtype="string"][data-template="tmplmultistateline"],
+  div.cmd-widget[data-type="action"][data-subtype="select"][data-template="default"],
+  div.cmd-widget[data-type="action"][data-subtype="other"][data-template="binarySwitch"] {
     display: block;
   }
-  div.cmd-widget[data-type="info"][data-subtype="numeric"][data-template="tile"],
-  div.cmd-widget[data-type="info"][data-subtype="numeric"][data-template="tmplmultistate"] {
-    min-width: 90px;
-    margin-right: 5px;
-    margin-left: 5px;
-    padding: 0;
+  div.cmd-widget[data-type="info"][data-subtype="binary"][data-template="tmpliconline"] .content-xs,
+  div.cmd-widget[data-type="info"][data-subtype="numeric"][data-template="line"] .content-xs,
+  div.cmd-widget[data-type="info"][data-subtype="string"][data-template="default"] .content-xs,
+  div.cmd-widget[data-type="info"][data-subtype="string"][data-template="tmplmultistateline"] .content-xs {
+    overflow: hidden;
   }
-  div.cmd-widget[data-type="info"][data-subtype="numeric"][data-template="tile"] .content-sm {
-    font-weight: bold;
-  }
-  div.cmd-widget[data-type="info"][data-subtype="numeric"][data-template="tile"] .state {
+  div.cmd-widget[data-type="info"][data-template="tile"] .state {
     font-size: 2em;
   }
   div.cmd-widget[data-type="info"][data-subtype="numeric"][data-template="badge"] .state {
@@ -434,37 +349,28 @@ Desktop
   }
   div.cmd-widget[data-type="info"][data-subtype="string"][data-template="multiline"] {
     display: block;
-    max-height: 50px;
     overflow: auto;
   }
-  div.cmd-widget[data-type="info"][data-subtype="string"][data-template="tmplmultistateline"] .value {
-    margin-left: 0;
-  }
-  div.cmd-widget[data-type="info"][data-subtype="string"][data-template="tmplmultistateline"] .timeCmd {
-    display: inline-block;
+  div.cmd-widget[data-type="info"][data-subtype="string"][data-template="multiline"] .content-xs {
+    height: 20px;
   }
 
 /* ____________________binarySwitch */
   div.cmd-widget[data-type="action"][data-subtype="other"][data-template="binarySwitch"] .content-xs {
-    max-width: 40px;
-    margin-left: 5px;
-    margin-right: 5px;
-    height: 22px !important;
-    line-height: 22px;
+    max-width: 140px;
+    margin: auto;
+    height:22px;
   }
-  div.cmd-widget[data-type="action"][data-subtype="other"][data-template="binarySwitch"] .content-xs.widthx2 {
-    min-width: 140px;
-    text-align: left;
+  div.cmd-widget[data-type="action"][data-subtype="other"][data-template="binarySwitch"] .content-xs .cmdName {
+    float: left;
   }
   label.binarySwitch {
     position: relative;
     float: right;
     width: 40px;
     height: 20px;
-    top: 2px;
-  }
-  .content-xs:not(.widthx2) label.binarySwitch {
-    margin-left: 47px !important;
+    margin-bottom: 0;
+    top: -3px;
   }
   label.binarySwitch input {
     display: none;
@@ -510,51 +416,34 @@ Desktop
   .cmd-widget.widget-hygrothermographe {
     width: 220px;
     height: 220px;
-    margin: 0 5px;
   }
 
-  div.arcgauge {
-    text-align: center;
-    margin: 0 5px;
-  }
   div.arcgauge .content-sm  {
     position: relative;
+    clip-path: polygon(0 -5px, 100% -5px, 100% 100%, 0 100%);
   }
   div.arcgauge .state {
     width: 90px;
   }
 
   div.arcgauge .cmdName {
-    display: block;
-    max-width: 80px;
-    max-height: 14px;
     overflow: hidden;
   }
   div.arcgauge .gauge,
   div.arcgauge .gaugeValue {
     position: absolute;
     top: 0;
-    left: 0;
-    width: 84px;
+    width: 85px;
     height: 45px;
     border-top-left-radius: 84px;
     border-top-right-radius: 84px;
     border: 4px solid var(--el-defaultColor);
     border-bottom: 0 !important;
   }
-  div.arcgauge .content-sm {
-    width: 84px;
-    height: 42px;
-    clip-path: polygon(0 -5px, 100% -5px, 100% 100%, 0 100%);
-  }
   div.arcgauge .gaugeValue {
     border: 6px solid var(--link-color);
     transform-origin: 42px 42px;
     transform: scale(0.94) rotate(-180deg);
-  }
-  div.arcgauge .cmdStats {
-    position: relative;
-    top: 5px;
   }
 
   .hgauge-value,
@@ -585,56 +474,22 @@ Desktop
   .shuttergauge {
     width: 90px;
     max-width: 90px;
-    margin-left: 5px;
-    margin-right: 5px;
     line-height: 10px;
   }
 
-  .shuttergauge .center-block {
-    top: -3px;
-  }
-  .shuttergauge .content-sm {
-    width: 90px;
-    min-width: 90px;
-    max-width: 90px;
-  }
   .shuttergauge-bckg {
     width: 39px;
     height: 40px;
     border-top: 5px solid var(--el-defaultColor);
     border-left: 3px solid var(--el-defaultColor);
     border-right: 3px solid var(--el-defaultColor);
-    position: absolute;
-    top: 16px;
-    left: 25px;
   }
   .shuttergauge-chart {
-    position: relative;
-    top: -18px;
-    height: 37px;
-  }
-  .shuttergauge[data-type=action] .shuttergauge-bckg {
-    left: 18px;
-  }
-  .shuttergauge[data-type=action] .state {
-    position: relative;
-    left: -7px;
+    height: 40px;
   }
   .shuttergauge .slider {
-    left: 40px;
-    top: 18px !important;
-  }
-  .shuttergauge .slider.ui-slider-vertical {
-    position: absolute;
-    margin: 5px;
-    height: 48px;
-    top: 16px !important;
-    right: 3px;
-  }
-  .shuttergauge .ui-slider-vertical > .sliderValue {
-    bottom: -5px;
-    right: 26px;
-    width: 25px;
+    bottom: 45px;
+    left: 45px;
   }
 
   .shuttergauge .noUi-pips {
@@ -653,19 +508,16 @@ Desktop
     left: 5px;
   }
 
-  .shuttergauge .timeCmd {
-    bottom: 1px;
-    margin-left: -15px !important;
-  }
   .hgauge .content-sm {
     width: 70px !important;
-    text-align: left;
+    margin: auto;
   }
   .hgauge-value {
     position: relative;
     padding: 0;
     margin-top: -1px;
     height: 10px;
+    align-self: flex-start;
   }
   .vgauge-value {
     position: absolute;
@@ -676,31 +528,21 @@ Desktop
 
 /* ____________________Compass */
   div.cmd-widget.widget-compass .widget-compass-container {
-    position: relative;
     width: 80px;
     height: 80px;
-    margin-bottom: 5px;
-    text-align: center;
-  }
-  div.cmd-widget.widget-compass .widget-compass-container * {
-    position: absolute;
-  }
-  div.cmd-widget.widget-compass .value {
-    position: absolute;
-    top: 48px;
   }
   div.cmd-widget.widget-compass .state {
+    height: 16px;
+    width:100%;
     font-size: 16px !important;
-    font-weight: bold;
-    position: relative;
-    top: 25px;
+    position: absolute;
+    bottom: 50%;
   }
   div.cmd-widget.widget-compass .winDir {
     font-size: 11px !important;
-    position: relative;
-    top: 28px;
   }
   div.cmd-widget.widget-compass .widget-compass-outline {
+    position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
@@ -711,7 +553,6 @@ Desktop
     border-radius: 50%;
   }
   div.cmd-widget.widget-compass .widget-compass-needle-placer {
-    position: absolute;
     margin-top: -3px;
     margin-left: -3px;
     width: 86px;
@@ -723,16 +564,10 @@ Desktop
     height: 0px;
     border: 8px solid transparent;
     border-top: 22px solid var(--al-warning-color);
-    left: 35px;
+    left: 37px;
   }
 
 /* ____________________Rain */
-  div.cmd-widget[data-type="info"][data-subtype="numeric"][data-template="rain"] {
-    margin-right: 5px;
-    margin-left: 5px;
-    padding: 0;
-  }
-
   @keyframes jeedomWidgetRainWaterAnimation{from{background-position:0 0}to{background-position:100000% 0}}
 
   div.cmd-widget.widget-rain .widget-rain-water {
@@ -749,20 +584,13 @@ Desktop
     background-size: cover;
     position: relative;
     height: 60px;
+    width: 80px;
     z-index: 20;
   }
 
   div.cmd-widget.widget-rain .widget-rain-container .plage {
     position: absolute;
-    bottom: 5px;
-    right: 5%;
-    left: 5%;
+    right: 20px;
+    bottom: 0;
     z-index: 2;
-  }
-
-  div.cmd-widget.widget-rain .widget-rain-main {
-    overflow: hidden;
-    width: 80px;
-    z-index: 0;
-    position : relative;
   }
